Various bugfixes and QoL features

--- a/settings.html
+++ b/settings.html
@@ -100,6 +100,12 @@
                 <!-- Action Buttons -->
                 <div class="dc_overview_section">
                     <div class="dc_button_row">
+                        <div id="dc_btn_score_now" class="menu_button" title="Score the latest AI message now">
+                            <i class="fa-solid fa-bullseye"></i> Score Now
+                        </div>
+                        <div id="dc_btn_score_chat" class="menu_button" title="Retroactively score all unscored AI messages in this chat">
+                            <i class="fa-solid fa-backward"></i> Score Chat
+                        </div>
                         <div id="dc_btn_reextract" class="menu_button" title="Re-analyze the character card and extract personality traits">
                             <i class="fa-solid fa-rotate"></i> Re-extract Traits
                         </div>
